# tpu

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  DECISIONS.md  LESSON_PLAN.md  LICENSE  MEMORY.md  Makefile  QUESTIONS.md  README.md  RECOMMENDATIONS.md  RISKS.md  SESSION.md  context.md  prompts.md  requirements.stage1.lock.txt  requirements.txt  todo.md
cloud_tpu_lab/: .gitignore  CHANGELOG.md  Makefile  README.md  TODO.md  learnings.md  pyproject.toml  requirements.txt
cloud_tpu_lab/docs/: 00_big_picture.md  01_cloud_tpu_versions.md  02_cloud_tpu_architecture.md  03_xla_pjrt_runtime.md  04_jax_on_tpu.md  05_pytorch_xla_on_tpu.md  06_tensorflow_on_tpu.md  07_sharding_and_spmd.md  08_profiling_and_debugging.md  09_cost_performance_methodology.md  10_cloud_tpu_setup_playbook.md  11_cleanup_and_cost_safety.md  12_observability_with_grafana_prometheus.md  13_oct_metrics_dictionary.md  14_benchmarking_playbook.md  15_paper_outline.md  16_runbook_real_tpu.md  progress_log.md
cloud_tpu_lab/examples/: run_cost_analysis.py  run_cpu_simulation_demo.py  run_jax_cloud_tpu_demo.py  run_jax_real_tpu.py  run_profiler_trace_demo.py  run_sharding_simulation.py  run_tensorflow_cloud_tpu_demo.py  run_torch_xla_cloud_tpu_demo.py
cloud_tpu_lab/gcp/: README.md  _env.sh  collect_artifacts.sh  create_tpu_vm.sh  delete_tpu_vm.sh  find_tpu_zone.sh  install_jax_tpu.sh  install_pytorch_xla_tpu.sh  install_tensorflow_tpu.sh  run_all.sh  run_jax_benchmark.sh  run_pytorch_xla_benchmark.sh  run_real_demo.sh  run_tensorflow_benchmark.sh  ssh_tpu_vm.sh  start_profiler.sh
(+520 files in other folders)
